[package]
name = "rust-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
pcap = "1.3"
pnet = "0.34"
dns-parser = "0.8"
aho-corasick = "1.1"
md5  = "0.7"
hex  = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
futures      = "0.3"
thiserror = "1"
anyhow    = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["clock"] }
dashmap = "5"

[build-dependencies]
tonic-build = "0.11"
